--- a/Yandex Algo 5 week 2.ipynb
+++ b/Yandex Algo 5 week 2.ipynb
@@ -2533,11 +2533,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1c5f0b6a",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NO\n"
+     ]
+    }
+   ],
+   "source": [
+    "initial_field = []\n",
+    "\n",
+    "# with open('yandex algo tests/input_J2_my_primer.txt') as f:\n",
+    "# with open('yandex algo tests/input_J2_my_primer_2.txt') as f:\n",
+    "# with open('yandex algo tests/input_J2_my_primer_3.txt') as f:\n",
+    "# with open('yandex algo tests/input_J2_primer.txt') as f:\n",
+    "# with open('yandex algo tests/05 (2)') as f:\n",
+    "# with open('yandex algo tests/49') as f:\n",
+    "with open('input.txt') as f:\n",
+    "    content = f.readlines()\n",
+    "m, n = map(int, content[0].split())\n",
+    "for lines in range(1, len(content)):\n",
+    "    line = content[lines].split('\\n')[0]\n",
+    "    line = list(line)\n",
+    "    initial_field.append(line)\n",
+    "    \n",
+    "    \n",
+    "# print('initial_field ','\\n', initial_field)\n",
+    "\n",
+    "transposed_initial_field = []\n",
+    "for col in range(n):\n",
+    "    new_line = []\n",
+    "    for line in range(m):\n",
+    "        new_line.append(initial_field[line][col])\n",
+    "    transposed_initial_field.append(new_line)\n",
+    "    \n",
+    "# print('transposed_initial_field ','\\n', transposed_initial_field)\n",
+    "\n",
+    "def find_rectangles(input_field):\n",
+    "    x_ranges_list = []\n",
+    "    sharp_counter = 0\n",
+    "    \n",
+    "    for line in input_field:\n",
+    "        if '#' in line:\n",
+    "            Xmin = line.index('#')\n",
+    "            Xmax = Xmin\n",
+    "            sharp_counter += 1\n",
+    "            for ind, elem in enumerate(line):\n",
+    "                if elem == '#' and ind > Xmax:\n",
+    "                    Xmax = ind\n",
+    "                    sharp_counter += 1\n",
+    "            x_ranges_list.append([Xmin, Xmax])\n",
+    "        else:\n",
+    "            x_ranges_list.append(None)\n",
+    "#     print('x_ranges_list ', x_ranges_list)\n",
+    "    \n",
+    "    prev_elem = None\n",
+    "    numb_of_rect = 0\n",
+    "    list_of_rectangle_coords = []\n",
+    "    \n",
+    "    for cur_ind, elem in enumerate(x_ranges_list):\n",
+    "        if elem != None:\n",
+    "            if prev_elem == None: #NEW RECTANGLE because no previous one connected\n",
+    "                numb_of_rect += 1\n",
+    "                prev_elem = elem\n",
+    "                list_of_rectangle_coords.append([[cur_ind,cur_ind] ,elem])\n",
+    "            else:\n",
+    "                if prev_elem == elem: #SAME RECTANGLE CONTINUED\n",
+    "                    list_of_rectangle_coords[numb_of_rect-1][0] = \\\n",
+    "                    [list_of_rectangle_coords[numb_of_rect-1][0][0], cur_ind]\n",
+    "                else: #NEW RECTANGLE because different dimensions\n",
+    "                    numb_of_rect += 1\n",
+    "                    prev_elem = elem\n",
+    "                    list_of_rectangle_coords.append([[cur_ind,cur_ind] ,elem])\n",
+    "        else:\n",
+    "            prev_elem = None\n",
+    "    \n",
+    "#     print('numb_of_rect ', numb_of_rect)\n",
+    "#     print('list_of_rectangle_coords ', list_of_rectangle_coords)\n",
+    "    \n",
+    "    return numb_of_rect, list_of_rectangle_coords, sharp_counter\n",
+    "\n",
+    "      \n",
+    "# scan X-wise\n",
+    "numb_of_rect_1, list_of_rectangle_coords_1, sharp_counter = find_rectangles(initial_field)\n",
+    "\n",
+    "# scan Y-wise\n",
+    "numb_of_rect_2, list_of_rectangle_coords_2, sharp_counter = find_rectangles(transposed_initial_field)\n",
+    "\n",
+    "\n",
+    "# determine where 2 or 1 rectangles\n",
+    "if numb_of_rect_1 == 2:\n",
+    "    print('YES')\n",
+    "    current_rectangle = 0\n",
+    "    x_min, x_max = list_of_rectangle_coords_1[current_rectangle][0][0], \\\n",
+    "    list_of_rectangle_coords_1[current_rectangle][0][1]\n",
+    "    y_min, y_max = list_of_rectangle_coords_1[current_rectangle][1][0], \\\n",
+    "    list_of_rectangle_coords_1[current_rectangle][1][1]\n",
+    "\n",
+    "    current_rectangle = 1\n",
+    "    x_min_2, x_max_2 = list_of_rectangle_coords_1[current_rectangle][0][0], \\\n",
+    "    list_of_rectangle_coords_1[current_rectangle][0][1]\n",
+    "    y_min_2, y_max_2 = list_of_rectangle_coords_1[current_rectangle][1][0], \\\n",
+    "    list_of_rectangle_coords_1[current_rectangle][1][1]\n",
+    "\n",
+    "    first_rect_out = []\n",
+    "    for line in range(m):\n",
+    "        added_line = ['.' for i in range(n)]\n",
+    "        if (line <= x_max) and (line >= x_min):\n",
+    "            for x in range(y_min,y_max+1):\n",
+    "                added_line[x] = 'a'\n",
+    "        if (line <= x_max_2) and (line >= x_min_2):\n",
+    "            for x in range(y_min_2,y_max_2+1):\n",
+    "                added_line[x] = 'b'\n",
+    "\n",
+    "        first_rect_out.append(added_line)    \n",
+    "          \n",
+    "    for line in first_rect_out:\n",
+    "        print(''.join(line))\n",
+    "    \n",
+    "elif numb_of_rect_2 == 2:\n",
+    "    print('YES')\n",
+    "    current_rectangle = 0\n",
+    "    y_min, y_max = list_of_rectangle_coords_2[current_rectangle][0][0], \\\n",
+    "    list_of_rectangle_coords_2[current_rectangle][0][1]\n",
+    "    x_min, x_max = list_of_rectangle_coords_2[current_rectangle][1][0], \\\n",
+    "    list_of_rectangle_coords_2[current_rectangle][1][1]\n",
+    "\n",
+    "    current_rectangle = 1\n",
+    "    y_min_2, y_max_2 = list_of_rectangle_coords_2[current_rectangle][0][0], \\\n",
+    "    list_of_rectangle_coords_2[current_rectangle][0][1]\n",
+    "    x_min_2, x_max_2 = list_of_rectangle_coords_2[current_rectangle][1][0], \\\n",
+    "    list_of_rectangle_coords_2[current_rectangle][1][1]\n",
+    "\n",
+    "    first_rect_out = []\n",
+    "    for line in range(m):\n",
+    "        added_line = ['.' for i in range(n)]\n",
+    "        if (line <= x_max) and (line >= x_min):\n",
+    "            for x in range(y_min,y_max+1):\n",
+    "                added_line[x] = 'a'\n",
+    "        if (line <= x_max_2) and (line >= x_min_2):\n",
+    "            for x in range(y_min_2,y_max_2+1):\n",
+    "                added_line[x] = 'b'\n",
+    "\n",
+    "        first_rect_out.append(added_line)\n",
+    "      \n",
+    "    for line in first_rect_out:\n",
+    "        print(''.join(line))\n",
+    "\n",
+    "\n",
+    "elif numb_of_rect_1 == 1:\n",
+    "    current_rectangle = 0\n",
+    "    x_min, x_max = list_of_rectangle_coords_1[current_rectangle][0][0], \\\n",
+    "    list_of_rectangle_coords_1[current_rectangle][0][1]\n",
+    "    y_min, y_max = list_of_rectangle_coords_1[current_rectangle][1][0], \\\n",
+    "    list_of_rectangle_coords_1[current_rectangle][1][1]\n",
+    "    \n",
+    "    if (x_min == x_max) and (y_min == y_max): # ONLY ONE SQUARE\n",
+    "        print('NO')\n",
+    "        \n",
+    "    elif sharp_counter != ((x_max+1-x_min)*(y_max+1-y_min)):\n",
+    "        print('NO')\n",
+    "        \n",
+    "    elif(y_min != y_max):\n",
+    "        first_rect_out = []\n",
+    "        for line in range(m):\n",
+    "            added_line = ['.' for i in range(n)]\n",
+    "            if (line <= x_max) and (line >= x_min):\n",
+    "                for x in range(y_min,y_min+1):\n",
+    "                    added_line[x] = 'a'\n",
+    "                for x in range(y_min+1,y_max+1):\n",
+    "                    added_line[x] = 'b'\n",
+    "\n",
+    "            first_rect_out.append(added_line)\n",
+    "        print('YES')\n",
+    "        for line in first_rect_out:\n",
+    "            print(''.join(line))\n",
+    "            \n",
+    "    else:\n",
+    "        first_rect_out = []\n",
+    "        for line in range(m):\n",
+    "            added_line = ['.' for i in range(n)]\n",
+    "            if line == x_min:\n",
+    "                for x in range(y_min,y_max+1):\n",
+    "                    added_line[x] = 'a'\n",
+    "            elif (line <= x_max) and (line > x_min):\n",
+    "                for x in range(y_min,y_max+1):\n",
+    "                    added_line[x] = 'b'\n",
+    "\n",
+    "            first_rect_out.append(added_line)\n",
+    "        print('YES')\n",
+    "        for line in first_rect_out:\n",
+    "            print(''.join(line))\n",
+    "\n",
+    "elif numb_of_rect_2 == 1:\n",
+    "    current_rectangle = 0\n",
+    "    y_min, y_max = list_of_rectangle_coords_2[current_rectangle][0][0], \\\n",
+    "    list_of_rectangle_coords_2[current_rectangle][0][1]\n",
+    "    x_min, x_max = list_of_rectangle_coords_2[current_rectangle][1][0], \\\n",
+    "    list_of_rectangle_coords_2[current_rectangle][1][1]\n",
+    "    \n",
+    "    if (x_min == x_max) and (y_min == y_max): # ONLY ONE SQUARE\n",
+    "        print('NO')\n",
+    "        \n",
+    "    elif sharp_counter != ((x_max+1-x_min)*(y_max+1-y_min)):\n",
+    "        print('NO')\n",
+    "        \n",
+    "    elif(y_min != y_max):\n",
+    "        first_rect_out = []\n",
+    "        for line in range(m):\n",
+    "            added_line = ['.' for i in range(n)]\n",
+    "            if (line <= x_max) and (line >= x_min):\n",
+    "                for x in range(y_min,y_min+1):\n",
+    "                    added_line[x] = 'a'\n",
+    "                for x in range(y_min+1,y_max+1):\n",
+    "                    added_line[x] = 'b'\n",
+    "\n",
+    "            first_rect_out.append(added_line)\n",
+    "        print('YES')\n",
+    "        for line in first_rect_out:\n",
+    "            print(''.join(line))\n",
+    "            \n",
+    "    else:\n",
+    "        first_rect_out = []\n",
+    "        for line in range(m):\n",
+    "            added_line = ['.' for i in range(n)]\n",
+    "            if line == x_min:\n",
+    "                for x in range(y_min,y_max+1):\n",
+    "                    added_line[x] = 'a'\n",
+    "            elif (line <= x_max) and (line > x_min):\n",
+    "                for x in range(y_min,y_max+1):\n",
+    "                    added_line[x] = 'b'\n",
+    "\n",
+    "            first_rect_out.append(added_line)\n",
+    "        print('YES')\n",
+    "        for line in first_rect_out:\n",
+    "            print(''.join(line))\n",
+    "\n",
+    "else:\n",
+    "    print('NO')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00c82a3e",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ".."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67e97cab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ".."
+   ]
   }
  ],
  "metadata": {
