--- a/Yandex Algo 5 week 3.ipynb
+++ b/Yandex Algo 5 week 3.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d015eea1",
+   "id": "61cd2381",
    "metadata": {},
    "source": [
     "### B. Анаграмма?\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60575101",
+   "id": "cbe4ae7d",
    "metadata": {},
    "source": [
     "### C. Удаление чисел\n",
@@ -252,8 +252,401 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "id": "e30290e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "1 1 2 3 5 5 2 2 1 5\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "numbers = input().split()\n",
+    "\n",
+    "num_freq_dict = {}\n",
+    "\n",
+    "for num in numbers:\n",
+    "    if num in num_freq_dict:\n",
+    "        num_freq_dict[num] = num_freq_dict[num] + 1\n",
+    "    else:\n",
+    "        num_freq_dict[num] = 1\n",
+    "\n",
+    "numbers = set(numbers)\n",
+    "\n",
+    "compatible_nums = dict.fromkeys(numbers, '')\n",
+    "\n",
+    "for key in compatible_nums.keys():\n",
+    "    int_key = int(key)\n",
+    "    compatible_nums[key] = [int_key-1, int_key+1]\n",
+    "    \n",
+    "#     new_list = []\n",
+    "#     for num in numbers:\n",
+    "#         if (key != num) and (abs(int(key) - int(num)) < 2):\n",
+    "#             new_list.append(num)\n",
+    "#     compatible_nums[key] = new_list\n",
+    "            \n",
+    "# print('compatible_nums', compatible_nums)\n",
+    "\n",
+    "list_of_nums_of_remaining_elems = []\n",
+    "\n",
+    "for key, value in compatible_nums.items():\n",
+    "    remaining_sum = int(num_freq_dict[key])\n",
+    "    list_of_nums_of_remaining_elems.append(remaining_sum)\n",
+    "    for v in value:\n",
+    "        if str(v) in num_freq_dict:\n",
+    "            remaining_sum_2 = remaining_sum + int(num_freq_dict[str(v)])\n",
+    "            list_of_nums_of_remaining_elems.append(remaining_sum_2)\n",
+    "\n",
+    "min_to_remove = 0\n",
+    "\n",
+    "if list_of_nums_of_remaining_elems:\n",
+    "    min_to_remove = n - max(list_of_nums_of_remaining_elems)\n",
+    "    \n",
+    "print(min_to_remove)\n",
+    "\n",
+    "# print(f'''\n",
+    "# num_freq_dict {num_freq_dict}\n",
+    "# numbers {numbers}\n",
+    "# compatible_nums {compatible_nums}\n",
+    "# list_of_nums_of_remaining_elems {list_of_nums_of_remaining_elems}\n",
+    "\n",
+    "# ''')\n",
+    "\n",
+    "#1\n",
+    "# 33292\n",
+    "\n",
+    "#10\n",
+    "# 22238 38788 73611 22861 18865 52721 85325 98901 72035 74803"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b789c2f",
+   "metadata": {},
+   "source": [
+    "### D. Повторяющееся число\n",
+    "\n",
+    "Ограничение времени \t1 секунда\n",
+    "Ограничение памяти \t64Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "Вам дана последовательность измерений некоторой величины. Требуется определить, повторялась ли какое-либо число, причём расстояние между повторами не превосходило k.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "\n",
+    "В первой строке задаются два числа n и k (1 ≤ n, k ≤ 105).\n",
+    "\n",
+    "Во второй строке задаются n чисел, по модулю не превосходящих 109.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "\n",
+    "Выведите YES, если найдется повторяющееся число и расстояние между повторами не превосходит k и NO в противном случае.\n",
+    "\n",
+    "**Пример 1**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "4 2\n",
+    "\n",
+    "1 2 3 1\n",
+    "\n",
+    "NO\n",
+    "\n",
+    "**Пример 2**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "4 1\n",
+    "\n",
+    "1 0 1 1\n",
+    "\n",
+    "YES\n",
+    "\n",
+    "**Пример 3**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "6 2\n",
+    "\n",
+    "1 2 3 1 2 3\n",
+    "\n",
+    "NO\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "5c6c9cb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NO\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TL on test 17 solution\n",
+    "\n",
+    "with open('yandex algo tests/D3_primer.txt') as f:\n",
+    "# with open('yandex algo tests/D3_primer_2.txt') as f:\n",
+    "# with open('yandex algo tests/D3_primer_3.txt') as f:\n",
+    "# with open('yandex algo tests/04 (2)') as f: #no\n",
+    "# with open('yandex algo tests/07') as f: #no\n",
+    "# with open('yandex algo tests/09 (2)') as f: #yes\n",
+    "# with open('input.txt') as f:      \n",
+    "    content = f.readlines()\n",
+    "    \n",
+    "n, k = map(int, content[0].split())\n",
+    "\n",
+    "numbers = [i for i in map(int, content[1].split())]\n",
+    "\n",
+    "\n",
+    "k_slice = numbers[:k+1]\n",
+    "k_slice = set(k_slice)\n",
+    "\n",
+    "# print('k_slice ', k_slice)\n",
+    "answer = 'NO'\n",
+    "\n",
+    "if (n <= k):\n",
+    "    if len(k_slice) < n:\n",
+    "        answer = 'YES'\n",
+    "        print(answer)\n",
+    "    else:\n",
+    "        answer = 'NO'\n",
+    "        print(answer)\n",
+    "\n",
+    "#first k check\n",
+    "elif len(k_slice) < k + 1:\n",
+    "    answer = 'YES'\n",
+    "    print(answer)\n",
+    "    \n",
+    "\n",
+    "#scanning rest one by one\n",
+    "else:\n",
+    "    for i in range(k+1, n):\n",
+    "#         print(numbers[i], numbers[i-k])\n",
+    "        if numbers[i] in numbers[i-k:i]:\n",
+    "            answer = 'YES'\n",
+    "            break\n",
+    "            \n",
+    "    print(answer)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "f5ad7305",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NO\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('yandex algo tests/D3_primer.txt') as f:\n",
+    "# with open('yandex algo tests/D3_primer_2.txt') as f:\n",
+    "# with open('yandex algo tests/D3_primer_3.txt') as f:\n",
+    "# with open('yandex algo tests/04 (2)') as f: #no\n",
+    "# with open('yandex algo tests/07') as f: #no\n",
+    "# with open('yandex algo tests/09 (2)') as f: #yes\n",
+    "# with open('input.txt') as f:      \n",
+    "    n, k = map(int, f.readline().split())\n",
+    "    numbers = list(f.readline().split())\n",
+    "\n",
+    "answer = 'NO'\n",
+    "index_dict = {}\n",
+    "\n",
+    "for ind, num in enumerate(numbers):\n",
+    "    if num in index_dict:\n",
+    "        index_dict[num].append(ind)\n",
+    "    else:\n",
+    "        index_dict[num] = [ind]\n",
+    "\n",
+    "for key, value in index_dict.items():\n",
+    "    if len(value) > 1:\n",
+    "        for v in range(1,len(value)):\n",
+    "            if (value[v] - value[v-1]) <= k:\n",
+    "                answer = 'YES'\n",
+    "                break\n",
+    "    \n",
+    "print(answer)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb9d1061",
+   "metadata": {},
+   "source": [
+    "### E. Два из трех\n",
+    "\n",
+    "Ограничение времени \t1 секунда\n",
+    "Ограничение памяти \t64Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "Вам даны три списка чисел. Найдите все числа, которые встречаются хотя бы в двух из трёх списков.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "\n",
+    "Во входных данных описывается три списка чисел. Первая строка каждого описания списка состоит из длины списка n (1 ≤ n ≤ 1000). Вторая строка описания содержит список натуральных чисел, записанных через пробел. Числа не превосходят 109.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "\n",
+    "Выведите все числа, которые содержатся хотя бы в двух списках из трёх, в порядке возрастания. Обратите внимание, что каждое число необходимо выводить только один раз.\n",
+    "\n",
+    "**Пример 1**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "2\n",
+    "3 1\n",
+    "2\n",
+    "1 3\n",
+    "2\n",
+    "1 2\n",
+    "\n",
+    "1 3\n",
+    "\n",
+    "**Пример 2**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "3\n",
+    "1 2 2\n",
+    "3\n",
+    "3 4 3\n",
+    "1\n",
+    "5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "27906b61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('yandex algo tests/E3_primer.txt') as f:\n",
+    "# with open('yandex algo tests/E3_primer_2.txt') as f:\n",
+    "# with open('input.txt') as f:\n",
+    "    n1 = int(f.readline())\n",
+    "    nums_1 = {i for i in map(int, f.readline().split())}\n",
+    "    n2 = int(f.readline())\n",
+    "    nums_2 = {i for i in map(int, f.readline().split())}\n",
+    "    n3 = int(f.readline())\n",
+    "    nums_3 = {i for i in map(int, f.readline().split())}\n",
+    "\n",
+    "\n",
+    "count_dict = {}\n",
+    "\n",
+    "for num in nums_1:\n",
+    "    if num in count_dict:\n",
+    "        count_dict[num] = count_dict[num] + 1\n",
+    "    else:\n",
+    "        count_dict[num] = 1\n",
+    "        \n",
+    "for num in nums_2:\n",
+    "    if num in count_dict:\n",
+    "        count_dict[num] = count_dict[num] + 1\n",
+    "    else:\n",
+    "        count_dict[num] = 1\n",
+    "        \n",
+    "for num in nums_3:\n",
+    "    if num in count_dict:\n",
+    "        count_dict[num] = count_dict[num] + 1\n",
+    "    else:\n",
+    "        count_dict[num] = 1\n",
+    "\n",
+    "at_least_two = []\n",
+    "        \n",
+    "for key, value in count_dict.items():\n",
+    "    if value > 1:\n",
+    "        at_least_two.append(int(key))\n",
+    "\n",
+    "at_least_two.sort()\n",
+    "at_least_two = list(map(str, at_least_two))\n",
+    "    \n",
+    "# print(n1, n2, n3)\n",
+    "# print(nums_1, nums_2, nums_3)\n",
+    "# print('count_dict', count_dict)\n",
+    "# print(at_least_two)\n",
+    "print(' '.join(at_least_two))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d71eeaf",
+   "metadata": {},
+   "source": [
+    "### F. Замена слов\n",
+    "\n",
+    "Ограничение времени \t1 секунда\n",
+    "Ограничение памяти \t64Mb\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "С целью экономии чернил в картридже принтера было принято решение укоротить некоторые слова в тексте. Для этого был составлен словарь слов, до которых можно сокращать более длинные слова. Слово из текста можно сократить, если в словаре найдется слово, являющееся началом слова из текста. Например, если в списке есть слово \"лом\", то слова из текста \"ломбард\", \"ломоносов\" и другие слова, начинающиеся на \"лом\", можно сократить до \"лом\".\n",
+    "\n",
+    "Если слово из текста можно сократить до нескольких слов из словаря, то следует сокращать его до самого короткого слова.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "\n",
+    "В первой строке через пробел вводятся слова из словаря, слова состоят из маленьких латинских букв. Гарантируется, что словарь не пуст и количество слов в словаре не превышет 1000, а длина слов — 100 символов.\n",
+    "\n",
+    "Во второй строке через пробел вводятся слова текста (они также состоят только из маленьких латинских букв). Количество слов в тексте не превосходит 105, а суммарное количество букв в них — 106.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "\n",
+    "Выведите текст, в котором осуществлены замены.\n",
+    "\n",
+    "**Пример 1**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "a b\n",
+    "abdafb basrt casds dsasa a\n",
+    "\n",
+    "a b casds dsasa a\n",
+    "\n",
+    "**Пример 2**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "aa bc aaa\n",
+    "a aa aaa bcd abcd\n",
+    "\n",
+    "a aa aa bc abcd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "84b520e6",
+   "id": "85cf12b3",
    "metadata": {},
    "outputs": [],
    "source": []
